--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "google-genai>=1.0.0",
     "pydantic>=2.10.0",
     "Pillow>=11.0.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [project.optional-dependencies]
