--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 ]
 dependencies = [
     "google-genai>=1.0.0",
+    "google-cloud-vision>=3.8.0",
     "pydantic>=2.10.0",
     "Pillow>=11.0.0",
     "python-dotenv>=1.0.0",
